--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">PLATO 캘린더</string>
     <string name="calendar">달력</string>
     <string name="to_do">할일</string>
+    <string name="cafeteria">학식</string>
     <string name="setting">설정</string>
 </resources>
